[package]
name = "oxirs-chat"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RAG chat API with LLM integration and natural language to SPARQL translation"
keywords = ["rag", "chat", "llm", "ai", "semantic-search"]
categories = ["science", "algorithms", "web-programming"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
oxirs-core.workspace = true
oxirs-vec.workspace = true
oxirs-embed.workspace = true

# SciRS2 dependencies for AI chat and NLP
scirs2-core = { workspace = true, features = ["random"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4.4", features = ["derive"] }
chrono.workspace = true

# HTTP Server and WebSocket
axum = { version = "0.8", features = ["ws"] }
tower.workspace = true
tower-http.workspace = true
futures-util.workspace = true

# LLM Integration
reqwest = { workspace = true, features = ["stream"] }
async-openai = { version = "0.33", features = ["chat-completion", "audio"] }
# anthropic-sdk = "0.1" # Add when available

# Storage and Caching
uuid.workspace = true

# Configuration
config = "0.15"
toml = "1.0"
serde_yaml.workspace = true

# Metrics and Monitoring
metrics = "0.24"

# Template Engine for SPARQL
handlebars = "6.4"
regex.workspace = true

# Async traits
async-trait = "0.1"

# Cryptographic functions for webhooks
hmac.workspace = true
sha2.workspace = true

# Session persistence and state management
oxicode.workspace = true  # Replaces bincode per COOLJAPAN Policy
oxiarc-zstd.workspace = true
flate2.workspace = true    # Gzip compression for memory_optimization
oxiarc-lz4.workspace = true  # LZ4 compression for memory_optimization

# Encryption
aes-gcm.workspace = true
base64.workspace = true

# Random number generation removed - use scirs2-core::random instead
fastrand.workspace = true

# Excel export (feature-gated for Pure Rust policy)
rust_xlsxwriter = { version = "0.94", optional = true }

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[features]
default = []
llm-integration = []
nl2sparql = []
excel-export = ["rust_xlsxwriter"]

[[bin]]
name = "oxirs-chat"
path = "src/main.rs"
