[package]
name = "oxirs-embed"
version = "0.1.0-alpha.1"
authors = ["OxiRS Team"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cool-japan/oxirs"
homepage = "https://github.com/cool-japan/oxirs"
description = "Knowledge graph embeddings with TransE, ComplEx, and custom models"
keywords = ["rdf", "sparql", "knowledge-graph", "embeddings", "ai"]
categories = ["database", "science", "data-structures", "algorithms"]
rust-version = "1.70"

[dependencies]
# Core dependencies - using workspace versions for consistency
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true }
rand = { workspace = true }
rayon = "1.10"
nalgebra = "0.33"
uuid = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
rand_distr = "0.4"
num_cpus = { workspace = true }
tempfile = { workspace = true }
# GraphQL and streaming dependencies - downgraded to avoid arrow conflicts
async-graphql = "6.0"
tokio-stream = { workspace = true }
futures-util = { workspace = true }
regex = "1.10"

# Federated learning dependencies
bincode = "1.3"
flate2 = "1.0"

# Internal OxiRS dependencies
oxirs-vec = { path = "../../engine/oxirs-vec" }

# Web server dependencies (for API server feature)
axum = { version = "0.7", optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "timeout", "trace"], optional = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["basic-models"]
basic-models = ["transe", "complex", "distmult"]
advanced-models = ["rotate", "conve", "tucker", "quatd"]
neural-models = []
transe = []
complex = []
distmult = []
rotate = []
conve = ["neural-models"]
tucker = []
quatd = []
custom-models = []
ontology-aware = []
multi-modal = []
gpu-acceleration = []
api-server = ["dep:axum", "dep:tower", "dep:tower-http"]