[package]
name = "oxirs-physics"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Physics-informed digital twin simulation bridge for OxiRS"
keywords = ["physics", "simulation", "digital-twin", "scirs2", "neuro-symbolic"]
categories = ["science", "simulation"]
readme = "README.md"
rust-version.workspace = true

[dependencies]
oxirs-core.workspace = true

# SciRS2 scientific computing foundation
scirs2-core.workspace = true
scirs2-integrate = { workspace = true, optional = true }

# Units of measurement (type-safe physics)
uom = { version = "0.38", optional = true }

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true

[features]
default = []
simulation = ["scirs2-integrate", "uom"]
# v0.3.0 W4-S12: GPU acceleration for FEM stress, Navier-Stokes pressure, and
# heat-diffusion stencils. Default off; CPU fallback is always available.
gpu = ["scirs2-core/gpu"]
# v0.3.0 W4-S12: PINN residual correction. Default off; pure-Rust feed-forward
# network loaded from a JSON model file.
pinn_correction = []
full = ["simulation"]

[package.metadata.docs.rs]
features = ["full"]
