[package]
name = "oxirs-shacl-ai"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "AI-powered shape induction and data repair suggestions for SHACL validation"
keywords = ["shacl", "ai", "machine-learning", "validation", "rdf"]
categories = ["science", "algorithms", "data-structures"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
oxirs-core.workspace = true
oxirs-shacl.workspace = true

# SciRS2 dependencies for AI-powered SHACL validation
scirs2-core = { workspace = true }
scirs2-neural = { workspace = true }
scirs2-graph = { workspace = true }
scirs2-stats = { workspace = true }
scirs2-metrics = { workspace = true }
scirs2-optimize = { workspace = true }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
tokio.workspace = true
num_cpus.workspace = true
# ndarray and rand now provided by scirs2-core (SciRS2 compliance)
regex.workspace = true
indexmap.workspace = true
uuid.workspace = true
threadpool = "1.8"
sysinfo.workspace = true  # Updated to 0.33 to fix objc2-core-foundation conflict
nalgebra = { workspace = true, features = ["serde-serialize"] }
num-complex = { version = "0.4", features = ["serde"] }
async-trait.workspace = true
futures.workspace = true
dashmap.workspace = true
# datafusion.workspace = true  # Temporarily disabled due to version conflicts
fastrand = "2.3"
base64.workspace = true
url = { version = "2.5", features = ["serde"] }
tokio-stream.workspace = true
libm = "0.2"  # For erf function
flate2 = { workspace = true }
oxiarc-zstd = { workspace = true }
oxiarc-lz4 = { workspace = true }

[dev-dependencies]
criterion.workspace = true
tracing-subscriber.workspace = true

[features]
default = []
shape-induction = []
data-repair = []
