[package]
name = "oxirs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core RDF and SPARQL functionality for OxiRS - native Rust implementation with zero dependencies"
keywords = ["rdf", "sparql", "semantic-web", "triple-store", "knowledge-graph"]
categories = ["database", "data-structures", "parsing"]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# OxiGraph parser dependencies (upgraded to latest versions)
oxttl.workspace = true         # Turtle, N-Triples, N-Quads, TriG, N3 parsers (v0.2.1)
oxrdfxml.workspace = true      # RDF/XML parser (v0.2.1)
oxjsonld.workspace = true      # JSON-LD parser (v0.2.1)
oxrdf.workspace = true         # RDF data model (v0.3.1)

json-event-parser = { version = "0.2", features = ["async-tokio"] }
quick-xml = { workspace = true, features = ["async-tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
regex.workspace = true
lazy_static = "1.5"
once_cell.workspace = true

# Ultra performance dependencies
rayon = { workspace = true, optional = true }
crossbeam = "0.8"
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
crossbeam-deque = "0.8"
dashmap.workspace = true
bumpalo = "3.14"
memmap2.workspace = true
parking_lot.workspace = true
ahash = "0.8"
simd-json = "0.14"
wide = { version = "0.7", optional = true }
num_cpus.workspace = true
sys-info = "0.9"
libc.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "io-util"] }
async-trait = "0.1"
smallvec = "1.15"
futures = "0.3"

# HTTP client for federated SPARQL queries
reqwest = { workspace = true, features = ["stream"] }

# Hash function dependencies for SPARQL 1.2
sha1.workspace = true
sha2.workspace = true
md5.workspace = true
siphasher = "1.0"  # For optimized term encoding

# Additional dependencies for SPARQL functions
chrono.workspace = true
# rand replaced with scirs2-core random generation
fastrand.workspace = true
uuid.workspace = true
urlencoding.workspace = true

# Storage engine dependencies
rocksdb = { workspace = true, optional = true }
oxicode.workspace = true  # Replaces bincode per COOLJAPAN Policy
lru.workspace = true
glob = "0.3"

# Columnar storage dependencies (temporarily disabled due to chrono conflicts)
# arrow.workspace = true
# datafusion.workspace = true
# parquet.workspace = true

# Compression dependencies
lz4 = "1.28"
zstd.workspace = true

# Cryptographic dependencies
blake3 = "1.8"
hex = "0.4"

# BiMap for term interning
bimap = "0.6"

# Zero-copy serialization
bytes = { workspace = true }

# SciRS2 scientific computing dependencies (replaces direct ndarray/rand usage)
scirs2-core = { workspace = true, features = ["memory_management", "memory_efficient", "parallel"] }

# GPU monitoring (optional)
nvml-wrapper = { version = "0.11", optional = true }

# High-performance validation dependencies from oxrdf ecosystem
oxiri.workspace = true         # Fast IRI validation and parsing
oxilangtag.workspace = true    # Fast language tag validation
oxsdatatypes.workspace = true  # Fast XSD datatype validation and parsing

# Dependencies for Unicode normalization
icu = "1.5"
icu_normalizer = "1.5"
icu_properties = "1.5"

# Random number generation now provided by scirs2-core

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["test-util", "rt", "io-util", "macros"] }
tempfile = "3.24"

[features]
default = ["serde", "parallel", "rdf-12", "rdf-star", "sparql-12"]
serde = []
async = []
async-tokio = ["async"]
parallel = ["rayon"]
simd = ["wide"]
gpu = ["nvml-wrapper"]
cuda = []
opencl = []
metal = []
blas = []
rdf-12 = []
rdf-star = []
sparql-12 = []
# Columnar features temporarily disabled due to dependency conflicts
# datafusion = []
# arrow = []
# parquet = []
# columnar = ["datafusion", "arrow", "parquet"]
rocksdb = ["dep:rocksdb"]

[[bench]]
name = "indexed_graph_bench"
harness = false

[[bench]]
name = "concurrent_graph_bench"
harness = false

[[bench]]
name = "parallel_batch_bench"
harness = false

[[bench]]
name = "query_visualization_bench"
harness = false

