[package]
name = "oxirs-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core RDF and SPARQL functionality for OxiRS - native Rust implementation with zero dependencies"
keywords = ["rdf", "sparql", "semantic-web", "triple-store", "knowledge-graph"]
categories = ["database", "data-structures", "parser-implementations"]
readme = "README.md"
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# OxiGraph parser dependencies (upgraded to latest versions)
oxttl.workspace = true         # Turtle, N-Triples, N-Quads, TriG, N3 parsers (v0.2.1)
oxrdfxml.workspace = true      # RDF/XML parser (v0.2.1)
oxjsonld.workspace = true      # JSON-LD parser (v0.2.1)
oxrdf.workspace = true         # RDF data model (v0.3.1)

json-event-parser = { version = "0.2", features = ["async-tokio"] }
quick-xml = { workspace = true, features = ["async-tokio"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
indexmap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
regex.workspace = true
once_cell.workspace = true

# Ultra performance dependencies
rayon = { workspace = true, optional = true }
crossbeam = "0.8"
crossbeam-epoch = "0.9"
crossbeam-deque = "0.8"
dashmap.workspace = true
bumpalo.workspace = true
memmap2.workspace = true
parking_lot.workspace = true
ahash = "0.8"
simd-json = "0.17"
wide = { version = "1.5", optional = true }
sys-info = "0.9"
libc.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "io-util"] }
async-trait.workspace = true
smallvec = "1.15"
futures.workspace = true

# HTTP client for federated SPARQL queries
reqwest = { workspace = true, features = ["stream"] }

# Hash function dependencies for SPARQL 1.2
sha1.workspace = true
sha2.workspace = true
md5.workspace = true
siphasher = "1.0"  # For optimized term encoding

# Additional dependencies for SPARQL functions
chrono.workspace = true
# rand replaced with scirs2-core random generation
fastrand.workspace = true
uuid.workspace = true

# Storage engine dependencies
oxicode.workspace = true  # Replaces bincode per COOLJAPAN Policy
lru.workspace = true
glob = "0.3"

# Columnar storage dependencies (temporarily disabled due to chrono conflicts)
# arrow.workspace = true
# datafusion.workspace = true
# parquet.workspace = true

# Compression dependencies
oxiarc-lz4 = { workspace = true }
oxiarc-zstd.workspace = true

# Cryptographic dependencies
blake3.workspace = true
hex.workspace = true

# TLS CryptoProvider: install OxiTLS's Pure Rust rustls provider as the process
# default (via ctor, pre-main) so every binary AND test process that links
# oxirs-core has TLS working without aws-lc-sys/ring. reqwest uses
# `rustls-no-provider`, which requires a process-default provider at runtime.
oxitls.workspace = true
rustls.workspace = true
ctor.workspace = true

# BiMap for term interning
bimap = "0.6"

# Zero-copy serialization
bytes = { workspace = true }

# SciRS2 scientific computing dependencies (replaces direct ndarray/rand usage)
scirs2-core = { workspace = true, features = ["memory_management", "memory_efficient", "parallel"] }

# GPU monitoring: the real NVIDIA NVML backend (nvml-wrapper / nvml-wrapper-sys C
# FFI) has been quarantined into the `oxirs-gpu-monitor` crate (publish = false)
# per COOLJAPAN Pure Rust Policy v2. oxirs-core keeps only the Pure-Rust GpuMonitor
# stub in src/ai/gpu_monitor.rs, so no nvml dependency is declared here.

# High-performance validation dependencies from oxrdf ecosystem
oxiri.workspace = true         # Fast IRI validation and parsing
oxilangtag.workspace = true    # Fast language tag validation
oxsdatatypes.workspace = true  # Fast XSD datatype validation and parsing

# Random number generation now provided by scirs2-core

# AST parsing for API surface tracking
syn = { workspace = true }
quote = { workspace = true }

[dev-dependencies]
criterion.workspace = true
tokio = { workspace = true, features = ["test-util", "rt", "io-util", "macros"] }
tempfile.workspace = true
# Heap profiler for the memory-footprint measurement example (dev-only, Pure
# Rust). Gated behind the `dhat-heap` feature so it never perturbs a plain
# release measurement run and never reaches library/default builds.
dhat = "0.3"

[features]
default = ["serde", "parallel", "rdf-12", "rdf-star", "sparql-12", "malloc-trim"]
serde = []
# Return freed heap pages to the OS via glibc `malloc_trim` once a bulk load has
# finished trimming its term dictionaries. Linux/glibc only (compiled to a no-op
# elsewhere) and uses the crate's already-present pure-Rust `libc` binding, so it
# adds no C dependency. On by default; disable with `--no-default-features` (or by
# dropping it from the default set) to skip the call.
malloc-trim = []
async = []
async-tokio = ["async"]
parallel = ["rayon"]
simd = ["wide"]
cuda = []
opencl = []
metal = []
blas = []
rdf-12 = []
rdf-star = []
sparql-12 = []
# Enables the dhat heap profiler inside the `mem_profile_load` example only.
# Off by default; a dev-only measurement toggle with no effect on the library.
dhat-heap = []
# Experimental AI research modules (consciousness/molecular/quantum). These generate
# results from untrained, randomly-initialized weights and are unvalidated research
# prototypes — not production AI features. Off by default: ~12.8k lines with no
# consumers in the default build, so default builds stay lean and warning-free.
# Opt in explicitly (also enabled by --all-features) at your own risk.
experimental-ai = []
# Columnar features temporarily disabled due to dependency conflicts
# datafusion = []
# arrow = []
# parquet = []
# columnar = ["datafusion", "arrow", "parquet"]

[[bin]]
name = "api_snapshot"
path = "src/bin/api_snapshot.rs"

[[bench]]
name = "indexed_graph_bench"
harness = false

[[bench]]
name = "concurrent_graph_bench"
harness = false

[[bench]]
name = "parallel_batch_bench"
harness = false

[[bench]]
name = "query_visualization_bench"
harness = false


[[bench]]
name = "rdf_bench"
harness = false

[[bench]]
name = "sla_suite"
harness = false
