[package]
name = "zstd"
version = "0.13.3"
edition = "2021"
publish = false
license = "Apache-2.0"
description = "Pure-Rust zstd-API shim backed by oxiarc-zstd (COOLJAPAN Pure Rust Policy v2). Local [patch.crates-io] override for oxirs — NOT the upstream zstd crate; implements the bulk/stream/zstd_safe surface tantivy, parquet, pulsar, and wasmtime use."

[dependencies]
oxiarc-zstd = "0.3.6"

[features]
# No-op feature shims: the real upstream `zstd 0.13` exposes these and downstream
# crates (tantivy-sstable wants `experimental`, parquet/pulsar pull the default set)
# request them on the `zstd` dependency. This crate routes everything to oxiarc-zstd
# and ignores them, but they MUST be declared by name or cargo rejects this crate as a
# feature-incompatible `[patch.crates-io]` override and falls back to the C-FFI zstd.
default = ["legacy", "arrays", "zdict_builder"]
arrays = []
bindgen = []
debug = []
doc-cfg = []
experimental = []
fat-lto = []
legacy = []
no_asm = []
pkg-config = []
thin = []
thin-lto = []
wasm = []
zdict_builder = []
zstdmt = []

[workspace]
